remove add blas package

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -182,16 +182,17 @@ else()
   
   set(ARMA_OS unix)
   
-  hunter_add_package( CLAPACK )
+  # hunter_add_package( CLAPACK )
   include(ARMA_FindMKL)
   include(ARMA_FindACMLMP)
   include(ARMA_FindACML)
   include(ARMA_FindATLAS)
   hunter_add_package( OpenBLAS )
   find_package(OpenBLAS CONFIG REQUIRED)
-  hunter_add_package( LAPACK )
-  find_package(LAPACK CONFIG REQUIRED)
-  set(BLAS_FOUND 1)
+  # hunter_add_package( LAPACK )
+  # find_package(LAPACK CONFIG REQUIRED)
+  set(BLAS_FOUND FALSE)
+  set(LAPACK_FOUND FALSE)
   
   message(STATUS "     MKL_FOUND = ${MKL_FOUND}"     )
   message(STATUS "  ACMLMP_FOUND = ${ACMLMP_FOUND}"  )
