better third party blas maintain

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -126,7 +126,19 @@ endif()
 
 option(BUILD_SHARED_LIBS "build shared library" OFF)
 option(DETECT_HDF5 "Detect HDF5 and include HDF5 support, if found" ON)
+option(USE_MKL "Use MKL as the blas library" OFF)
+option(USE_OPENBLAS "Use OpenBLAS as the blas library" OFF)
 
+if(USE_MKL)
+  message("*** WARNING MKL not yet implemented, use LAPACK")
+  set(BLAS_LIB_USE "LAPACK")
+elseif(USE_OPENBLAS)
+  message(STATUS "USE OpenBLAS as BLAS library")
+  set(BLAS_LIB_USE "OpenBLAS")
+else()
+  message(STATUS "USE LAPACK as BLAS library")
+  set(BLAS_LIB_USE "LAPACK")
+endif()
 
 if(WIN32)
   message(STATUS "")
@@ -177,18 +189,22 @@ else()
   
   set(ARMA_OS unix)
   
-  # hunter_add_package( CLAPACK )
-  include(ARMA_FindMKL)
-  include(ARMA_FindACMLMP)
-  include(ARMA_FindACML)
-  include(ARMA_FindATLAS)
-  # hunter_add_package( OpenBLAS )
-  # find_package(OpenBLAS CONFIG REQUIRED)
-  hunter_add_package( LAPACK )
-  find_package(LAPACK CONFIG REQUIRED)
-  # set(LAPACK_FOUND NO)
-  set(OpenBLAS_FOUND NO)
-  if(LAPACK_FOUND)
+  # include(ARMA_FindMKL)
+  # include(ARMA_FindACMLMP)
+  # include(ARMA_FindACML)
+  # include(ARMA_FindATLAS)
+  if(BLAS_LIB_USE STREQUAL "MKL")
+    hunter_add_package(MKL)
+    find_package(MKL CONFIG REQUIRED)
+    set(MKL_FOUND 1)
+  elseif(BLAS_LIB_USE STREQUAL "OpenBLAS")
+    hunter_add_package( OpenBLAS )
+    find_package(OpenBLAS CONFIG REQUIRED)
+    set(OpenBLAS_FOUND 1)
+  else()
+    hunter_add_package( LAPACK )
+    find_package(LAPACK CONFIG REQUIRED)
+    set(LAPACK_FOUND 1)
     set(BLAS_FOUND 1)
   endif()
   
