--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -130,8 +130,8 @@ option(USE_MKL "Use MKL as the blas library" OFF)
 option(USE_OPENBLAS "Use OpenBLAS as the blas library" OFF)
 
 if(USE_MKL)
-  message("*** WARNING MKL not yet implemented, use LAPACK")
-  set(BLAS_LIB_USE "LAPACK")
+  message(STATUS "USE MKL as BLAS library")
+  set(BLAS_LIB_USE "MKL")
 elseif(USE_OPENBLAS)
   message(STATUS "USE OpenBLAS as BLAS library")
   set(BLAS_LIB_USE "OpenBLAS")
@@ -194,8 +194,8 @@ else()
   # include(ARMA_FindACML)
   # include(ARMA_FindATLAS)
   if(BLAS_LIB_USE STREQUAL "MKL")
-    hunter_add_package(MKL)
-    find_package(MKL CONFIG REQUIRED)
+    hunter_add_package(mkl)
+    find_package(mkl REQUIRED)
     set(MKL_FOUND 1)
   elseif(BLAS_LIB_USE STREQUAL "OpenBLAS")
     hunter_add_package( OpenBLAS )
@@ -235,7 +235,7 @@ else()
     message(STATUS "")
     
     if(MKL_FOUND)
-      set(ARMA_LIBS ${ARMA_LIBS} ${MKL_LIBRARIES})
+      set(ARMA_LIBS ${ARMA_LIBS} mkl::mkl)
       
       if(ACMLMP_FOUND OR ACML_FOUND)
         message(STATUS "*** Intel MKL as well as AMD ACML libraries were found.")
