ignore ARPACK when use mkl

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -363,12 +363,16 @@ if(DETECT_HDF5)
   message(STATUS "")
 endif()
 
-
-hunter_add_package( ARPACK-NG )
-find_package(ARPACK-NG CONFIG REQUIRED)
-message(STATUS "ARPACK_FOUND = 1")
-set(ARMA_USE_ARPACK true)
-set(ARMA_LIBS ${ARMA_LIBS} arpack::arpack)
+if(NOT BLAS_LIB_USE STREQUAL "MKL")
+  hunter_add_package( ARPACK-NG )
+  find_package(ARPACK-NG CONFIG REQUIRED)
+  message(STATUS "ARPACK_FOUND = 1")
+  set(ARMA_USE_ARPACK true)
+  set(ARMA_LIBS ${ARMA_LIBS} arpack::arpack)
+else()
+  message(STATUS "ARPACK_FOUND = 0")
+  set(ARMA_USE_ARPACK false)
+endif()
 
 include(ARMA_FindSuperLU5)
 message(STATUS "SuperLU_FOUND = ${SuperLU_FOUND}")
