mkl lapack hybrid

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -195,7 +195,9 @@ else()
   # include(ARMA_FindATLAS)
   if(BLAS_LIB_USE STREQUAL "MKL")
     hunter_add_package(mkl-cmake)
+    hunter_add_package(LAPACK)
     find_package(mkl CONFIG REQUIRED)
+    find_package(LAPACK CONFIG REQUIRED)
     set(MKL_FOUND 1)
   elseif(BLAS_LIB_USE STREQUAL "OpenBLAS")
     hunter_add_package( OpenBLAS )
@@ -235,7 +237,7 @@ else()
     message(STATUS "")
     
     if(MKL_FOUND)
-      set(ARMA_LIBS ${ARMA_LIBS} mkl::mkl)
+      set(ARMA_LIBS ${ARMA_LIBS} mkl::mkl lapack)
       
       if(ACMLMP_FOUND OR ACML_FOUND)
         message(STATUS "*** Intel MKL as well as AMD ACML libraries were found.")
