no hunter add any blas lib

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -194,17 +194,13 @@ else()
   # include(ARMA_FindACML)
   # include(ARMA_FindATLAS)
   if(BLAS_LIB_USE STREQUAL "MKL")
-    hunter_add_package(mkl-cmake)
-    hunter_add_package(LAPACK)
-    find_package(mkl CONFIG REQUIRED)
-    find_package(LAPACK CONFIG REQUIRED)
-    set(MKL_FOUND 1)
+    include(ARMA_FindMKL)
+    # find_package(mkl CONFIG REQUIRED)
+    # set(MKL_FOUND 1)
   elseif(BLAS_LIB_USE STREQUAL "OpenBLAS")
-    hunter_add_package( OpenBLAS )
     find_package(OpenBLAS CONFIG REQUIRED)
     set(OpenBLAS_FOUND 1)
   else()
-    hunter_add_package( LAPACK )
     find_package(LAPACK CONFIG REQUIRED)
     set(LAPACK_FOUND 1)
     set(BLAS_FOUND 1)
@@ -237,7 +233,7 @@ else()
     message(STATUS "")
     
     if(MKL_FOUND)
-      set(ARMA_LIBS ${ARMA_LIBS} lapack mkl::mkl)
+      set(ARMA_LIBS ${ARMA_LIBS} ${MKL_LIBRARIES})
       
       if(ACMLMP_FOUND OR ACML_FOUND)
         message(STATUS "*** Intel MKL as well as AMD ACML libraries were found.")
@@ -365,16 +361,17 @@ if(DETECT_HDF5)
   message(STATUS "")
 endif()
 
-if(NOT BLAS_LIB_USE STREQUAL "MKL")
-  hunter_add_package( ARPACK-NG )
-  find_package(ARPACK-NG CONFIG REQUIRED)
-  message(STATUS "ARPACK_FOUND = 1")
-  set(ARMA_USE_ARPACK true)
-  set(ARMA_LIBS ${ARMA_LIBS} arpack::arpack)
-else()
-  message(STATUS "ARPACK_FOUND = 0")
-  set(ARMA_USE_ARPACK false)
-endif()
+# if(NOT BLAS_LIB_USE STREQUAL "MKL")
+#   hunter_add_package( ARPACK-NG )
+#   find_package(ARPACK-NG CONFIG REQUIRED)
+#   message(STATUS "ARPACK_FOUND = 1")
+#   set(ARMA_USE_ARPACK true)
+#   set(ARMA_LIBS ${ARMA_LIBS} arpack::arpack)
+# else()
+#   message(STATUS "ARPACK_FOUND = 0")
+#   set(ARMA_USE_ARPACK false)
+# endif()
+set(ARMA_USE_ARPACK false)
 
 include(ARMA_FindSuperLU5)
 message(STATUS "SuperLU_FOUND = ${SuperLU_FOUND}")
