back to use hunter_add_package, no way to get package path

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -198,9 +198,11 @@ else()
     # find_package(mkl CONFIG REQUIRED)
     # set(MKL_FOUND 1)
   elseif(BLAS_LIB_USE STREQUAL "OpenBLAS")
+    hunter_add_package(OpenBLAS)
     find_package(OpenBLAS CONFIG REQUIRED)
     set(OpenBLAS_FOUND 1)
   else()
+    hunter_add_package(LAPACK)
     find_package(LAPACK CONFIG REQUIRED)
     set(LAPACK_FOUND 1)
     set(BLAS_FOUND 1)
